--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,25 @@ services:
   app:
     build:
       context: .
+    environment:
+      - DB_HOST=db
+      - DB_NAME=app
+      - DB_USER=postgres
+      - DB_PASS=supersecretpw
     ports:
       - '8000:8000'
     volumes:
       - ./app:/app
     command:
-      - sh -c 'python manage.py runserver 0.0.0.0:8000'
+      - sh -c 'python manage.py wait_for_db &&
+               python manage.py migrate &&
+               python manage.py runserver 0.0.0.0:8000'
+    depends_on:
+      - db
+  db:
+    image: postgres:10-alpine
+    environment:
+      - POSTRGES_PASSWORD=supersecretpw
+      - POSTRGES_DB=app
+      - POSTRGES_USER=postgres
+      - POSTGRES_HOST_AUTH_METHOD=trust
