--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,29 @@ services:
   app:
     build:
       context: .
+    restart: on-failure
     environment:
       - DB_HOST=db
-      - DB_NAME=app
+      - DB_NAME=postgres
       - DB_USER=postgres
       - DB_PASS=supersecretpw
     ports:
       - '8000:8000'
     volumes:
       - ./app:/app
-    command:
-      - sh -c 'python manage.py wait_for_db &&
-               python manage.py migrate &&
-               python manage.py runserver 0.0.0.0:8000'
+    command: >
+      sh -c "python3 manage.py wait_for_db &&
+            python3 manage.py migrate &&
+            python3 manage.py runserver 0.0.0.0:8000"
     depends_on:
       - db
   db:
     image: postgres:10-alpine
+    restart: always
+    ports:
+      - '5432:5432'
     environment:
       - POSTRGES_PASSWORD=supersecretpw
-      - POSTRGES_DB=app
+      - POSTRGES_DB=postgres
       - POSTRGES_USER=postgres
       - POSTGRES_HOST_AUTH_METHOD=trust
